[FEAT] Estilos para el footer dark-theme

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
         </section> 
     </main>
 
-    <footer>
-        <p>Practicas de fetch y DOM by Carlos Soto 2023</p>
+    <footer class="footer">
+        <section class="container footer__section">
+            <p class="footer__text">Practicas de fetch y DOM</p>
+            <p class="footer__text">&copy; Carlos Soto</p>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
