[FEAT] Creacion de un loader con css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </section>
     </header>
 
-    <main>
-        <section> <!-- section container -->
-            <article></article> <!-- article para el loader -->
+    <main class="main">
+        <section class="container"> <!-- section container -->
+            <article class="loader"><div class="loader__ring"></div></article> <!-- article para el loader -->
             <article><input type="text"><iconify-icon icon="octicon:search-16"></iconify-icon></article> <!-- article para el buscador de personajes -->
             <article></article> <!-- article para el listado de personajes -->
             <article></article> <!-- article para los botones de paginas -->
