[FEAT] Estilos para la barra de buscar personaje por nombre/id

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
 
     <main class="main">
-        <section class="container"> <!-- section container -->
+        <section class="container main__container"> <!-- section container -->
             <article class="loader"><div class="loader__ring"></div></article> <!-- article para el loader -->
-            <article><input type="text"><iconify-icon icon="octicon:search-16"></iconify-icon></article> <!-- article para el buscador de personajes -->
+            <article class="search"><input class="search__input" type="text" id="search" name="search" placeholder="Buscar personaje por nombre o id" autocomplete="off" spellcheck="false"><iconify-icon class="search__icon" icon="octicon:search-16"></iconify-icon></article> <!-- article para el buscador de personajes -->
             <article></article> <!-- article para el listado de personajes -->
             <article></article> <!-- article para los botones de paginas -->
         </section> 
