[FEAT] Estilos para el section de Characters

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     </header>
 
     <main class="main">
-        <section class="container main__container"> <!-- section container -->
-            <article class="loader"><div class="loader__ring"></div></article> <!-- article para el loader -->
-            <article class="search"><input class="search__input" type="text" id="search" name="search" placeholder="Buscar personaje por nombre o id" autocomplete="off" spellcheck="false"><iconify-icon class="search__icon" icon="octicon:search-16"></iconify-icon></article> <!-- article para el buscador de personajes -->
-            <article></article> <!-- article para el listado de personajes -->
-            <article></article> <!-- article para los botones de paginas -->
-        </section> 
+        <div class="container main__container"> <!-- div container -->
+            <section class="loader"><article class="loader__ring"></article></section> <!-- article para el loader -->
+            <section class="search"><input class="search__input" type="text" id="search" name="search" placeholder="Buscar personaje por nombre o id" autocomplete="off" spellcheck="false"><iconify-icon class="search__icon" icon="octicon:search-16"></iconify-icon></section> <!-- article para el buscador de personajes -->
+            <section class="characters"></section> <!-- article para el listado de personajes -->
+            <section></section> <!-- article para los botones de paginas -->
+        </div> 
     </main>
 
     <footer class="footer">
