--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
