[FEAT] Estilos para el personaje seleccionado, vista de character.html

--- a/pages/character.html
+++ b/pages/character.html
@@ -8,7 +8,7 @@
     <title>Character | Rick & Morty API</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header header--character">
         <section class="header__section container">
             <picture class="header__logo">
                 <img src="../public/img/Logo_Rick_&_Morty_A.png" alt="logo Rick & Morty Show">
