[FEAT] Funcion para botones de pagina siguiente y pagina anterior en index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             <section id="loader" class="loader"><article id="loader__ring" class="loader__ring"></article></section> <!-- article para el loader -->
             <section id="search" class="search"><input class="search__input" type="text" id="search" name="search" placeholder="Buscar personaje por nombre o id" autocomplete="off" spellcheck="false"><iconify-icon class="search__icon" icon="octicon:search-16"></iconify-icon></section> <!-- article para el buscador de personajes -->
             <section id="characters" class="characters"></section> <!-- article para el listado de personajes -->
-            <section></section> <!-- article para los botones de paginas -->
+            <section> <!-- article para los botones de paginas -->
+                <button id="previous">&larr;</button>
+                <article id="pagination"></article>
+                <button id="next">&rarr;</button>
+            </section> 
         </div> 
     </main>
 
