[FEAT] Creacion de la paginacion para el index.html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             <section id="search" class="search"><input class="search__input" type="text" id="search" name="search" placeholder="Buscar personaje por nombre o id" autocomplete="off" spellcheck="false"><iconify-icon class="search__icon" icon="octicon:search-16"></iconify-icon></section> <!-- article para el buscador de personajes -->
             <section id="characters" class="characters"></section> <!-- article para el listado de personajes -->
             <section> <!-- article para los botones de paginas -->
-                <button id="previous">&larr;</button>
+                <button id="first"><iconify-icon icon="ci:chevron-left-duo"></iconify-icon></button>
+                <button id="previous"><iconify-icon icon="ci:chevron-left-md"></iconify-icon></button>
                 <article id="pagination"></article>
-                <button id="next">&rarr;</button>
+                <button id="next"><iconify-icon icon="ci:chevron-right-md"></iconify-icon></button>
+                <button id="last"><iconify-icon icon="ci:chevron-right-duo"></iconify-icon></button>
             </section> 
         </div> 
     </main>
