Cambios en el texto del footer en index.html y character.html

--- a/pages/character.html
+++ b/pages/character.html
@@ -30,8 +30,8 @@
 
     <footer class="footer">
         <section class="container footer__section">
-            <p class="footer__text">Practicas de fetch y DOM</p>
-            <p class="footer__text">&copy; Carlos Soto</p>
+            <p class="footer__text">Practicas de fetch y DOM :: Codo a Codo 4.0 - Comisión 23071</p>
+            <p class="footer__text">2023 &copy; Carlos Soto</p>
         </section>
     </footer>
 
